--- a/package.json
+++ b/package.json
@@ -18,18 +18,26 @@
     "gulp-csso": "^1.0.0",
     "gulp-filter": "^2.0.2",
     "gulp-flatten": "^0.0.4",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^4.1.0",
     "gulp-inject": "^4.3.0",
     "gulp-less": "^3.5.0",
     "gulp-livereload": "^3.8.0",
+    "gulp-minify-html": "^1.0.6",
+    "gulp-ng-annotate": "^2.1.0",
     "gulp-plumber": "^1.2.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-useref": "^3.1.5",
     "gulp-util": "^3.0.8",
     "http-server": "^0.9.0",
+    "imagemin-pngquant": "^5.1.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
     "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.8",
     "karma-junit-reporter": "^0.4.1",
+    "lazypipe": "^1.0.1",
     "main-bower-files": "^2.5.0",
     "protractor": "^4.0.9",
     "run-sequence": "^1.1.4",
