--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.1.0",
     "gulp-cachebust": "0.0.6",
-    "gulp-csso": "^1.0.0",
+    "gulp-clean-css": "^3.9.3",
     "gulp-filter": "^2.0.2",
     "gulp-flatten": "^0.0.4",
     "gulp-if": "^2.0.2",
@@ -26,6 +26,7 @@
     "gulp-minify-html": "^1.0.6",
     "gulp-ng-annotate": "^2.1.0",
     "gulp-plumber": "^1.2.0",
+    "gulp-size": "^3.0.0",
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.5",
     "gulp-util": "^3.0.8",
