--- a/bower.json
+++ b/bower.json
@@ -18,8 +18,8 @@
     "font-awesome": "^5.0.6",
     "highcharts": "^6.0.6",
     "angular-sanitize": "^1.6.9",
-    "bootstrap": "^4.0.0",
     "angular-bootstrap": "^2.5.0",
-    "angular-ui-router": "^1.0.15"
+    "angular-ui-router": "^1.0.15",
+    "bootstrap": "4.0"
   }
 }
